--- a/src/components/home/home.component.html
+++ b/src/components/home/home.component.html
@@ -8,13 +8,16 @@
 <div class="info">
   <div class="container">
       <div class="sales">
-
+          <h4>Sales</h4>
         </div>
         <div class="weekly-discount">
-      
+          <h4>Weekly discount</h4>
         </div>
         <div class="about-us">
-      
+          <h4>About Us</h4>
         </div>
   </div>
+  <div class="div" *ngFor="let test of videoSrc">
+  </div>
 </div>
+<featured-root></featured-root>
