--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,7 +11,6 @@ $white: #fff;
   font-family: Segoe SB;
   src: url('../assets/fonts/segoesb.ttf');
 }
-
 body{
   margin: 0; 
   padding: 0;
@@ -124,9 +123,86 @@ header{
       flex: 1;
       display: inline-block;
       vertical-align: top;
-      height: 200px;
+      height: 185px;
       width: 150px;
-      background: $black;
+      position: relative;
+      background-size: 100%! important;
+      h4{
+        position: relative;
+        top: 40%;
+        color: $white;
+        text-align: center;
+        font-size: 1.4rem;
+        font-family: Arial;
+        font-weight: 300;
+        text-transform: uppercase;
+      }
+    }
+    .sales{
+      background: url('../assets/img/bluetshirt.png') 100% no-repeat;
+    }
+    .weekly-discount{
+      background: url('../assets/img/navyblueshoes.png') 100% no-repeat;
+    }
+    .about-us{
+      background: url('../assets/img/blackbag.png') 100% no-repeat;
+    }
+  }
+}
+.featured{
+  .container{
+    text-align: center;
+    display: block;
+      h2{
+      font-weight: 300;
+      display: inline-block;
+      position: relative;
+      &:after, &:before{
+        position: absolute;
+        content: '';
+        height: 5px;
+        width: 200px;
+        border-top: 1px solid $black;
+        border-bottom: 1px solid $black;
+        top: 10px;
+      }
+      &:after{
+        left: 100%;
+        margin-left: 10px;
+      }
+      &:before{
+        right: 100%;
+        margin-right: 10px;
+      }
+    }
+    .weekly-products{
+      margin: 60px 0px;
+      display: flex;
+      flex-wrap: wrap;
+      .product{
+      transition: all 0.3s ease;
+        margin: 15px;
+        flex: 1;
+        height: 200px;
+        width: 200px;
+        background-size: 100% !important;
+        &:nth-child(1){
+          background: url('../assets/img/bluejacket.jpg') no-repeat;
+        }
+        &:nth-child(2){
+          background: url('../assets/img/blackblouse.jpg') no-repeat;
+        }
+        &:nth-child(3){
+          background: url('../assets/img/brownpurse.jpg') no-repeat;
+        }
+        &:nth-child(4){
+          background: url('../assets/img/blackpolo.jpg') no-repeat;
+          
+        }
+        &:hover{
+          transform: scale(1.2)
+        }
+      }
     }
   }
 }
@@ -139,6 +215,15 @@ header{
 @media screen and (max-width: 1200px) {
   .container{
     width: 80%;
+  }
+  .featured{
+    .container{
+      h2{
+      &:after, &:before{
+        width: 120px;
+      }
+      }
+    }
   }
 }
 @media screen and (max-width: 768px) {
@@ -175,8 +260,17 @@ header{
       background: red;
     }
   }
-  .sales, .weekly-discount, .about-us
-  {
-    display: block;
+  .info{
+    .container{
+      display: block;
+      .sales, .weekly-discount, .about-us {
+        margin: 15px 0px;
+        display: block;
+        width: 100%;
+      }
+    }
+    .weekly-discount{
+      background: url('../assets/img/navyblueshoes.png') 100% 70% no-repeat !important;
+    }
   }
 }
