--- a/src/components/home/featured/featured.component.html
+++ b/src/components/home/featured/featured.component.html
@@ -3,16 +3,24 @@
     <h2>WEEKLY FEATURED PRODUCTS</h2>
     <div class="weekly-products">
       <div class="product">
-
+      <div class="image"></div>
+          <h4>Mens Blue Zip Up Jacket</h4>
+          <h4>£90.00</h4>
       </div>
       <div class="product">
-
+      <div class="image"></div>
+          <h4>Blue Lace Blouse</h4>
+          <h4>£40.00</h4>
       </div>
       <div class="product">
-
+      <div class="image"></div>
+        <h4>Brown Purse With Shoulder Strap</h4>
+        <h4>£40.00</h4>
       </div>
       <div class="product">
-
+      <div class="image"></div>
+        <h4>Polka Dot Suit</h4>
+        <h4>£40.00</h4>
       </div>
     </div>
   </div>
