--- a/src/components/home/home.component.html
+++ b/src/components/home/home.component.html
@@ -17,7 +17,6 @@
           <h4>About Us</h4>
         </div>
   </div>
-  <div class="div" *ngFor="let test of videoSrc">
-  </div>
 </div>
 <featured-root></featured-root>
+<categories-root></categories-root>
