--- a/src/components/home/featured/featured.component.html
+++ b/src/components/home/featured/featured.component.html
@@ -1,26 +1,11 @@
-<div class="featured">
+<div class="featured" #featured>
   <div class="container">
     <h2>WEEKLY FEATURED PRODUCTS</h2>
     <div class="weekly-products">
-      <div class="product">
-      <div class="image"></div>
-          <h4>Mens Blue Zip Up Jacket</h4>
-          <h4>£90.00</h4>
-      </div>
-      <div class="product">
-      <div class="image"></div>
-          <h4>Blue Lace Blouse</h4>
-          <h4>£40.00</h4>
-      </div>
-      <div class="product">
-      <div class="image"></div>
-        <h4>Brown Purse With Shoulder Strap</h4>
-        <h4>£40.00</h4>
-      </div>
-      <div class="product">
-      <div class="image"></div>
-        <h4>Polka Dot Suit</h4>
-        <h4>£40.00</h4>
+      <div class="product" *ngFor="let weeklyproduct of weeklyProducts">
+      <div class="image" [ngStyle]="{'background-image': 'url('+ weeklyproduct.images +')'}"></div>
+        <h4>{{weeklyproduct.name}}</h4>
+        <h4>{{weeklyproduct.price}}</h4>
       </div>
     </div>
   </div>
