--- a/src/components/home/home.component.html
+++ b/src/components/home/home.component.html
@@ -20,3 +20,39 @@
 </div>
 <featured-root></featured-root>
 <categories-root></categories-root>
+<div class="info">
+  <div class="container">
+    <div class="info-wrapper">
+        <div class="circle">
+          <i class="fa fa-truck"></i>
+        </div>
+        <div class="text">
+          <h3>Fast Delivery</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente recusandae minus optio quas, explicabo, maiores quo, vel fugiat totam aspernatur odio laborum voluptatum quam porro quaerat voluptas laboriosam dolor perspiciatis.</p>
+        </div>
+    </div>
+    <div class="info-wrapper">
+        <div class="circle">
+          <i class="fa fa-lock"></i>
+        </div>
+        <div class="text">
+          <h3>Fast Delivery</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente recusandae minus optio quas, explicabo, maiores quo, vel fugiat totam aspernatur odio laborum voluptatum quam porro quaerat voluptas laboriosam dolor perspiciatis.</p>
+        </div>
+    </div>
+    <div class="info-wrapper">
+        <div class="circle">
+          <i class="fa fa-shopping-bag"></i>
+        </div>
+        <div class="text">
+          <h3>Fast Delivery</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente recusandae minus optio quas, explicabo, maiores quo, vel fugiat totam aspernatur odio laborum voluptatum quam porro quaerat voluptas laboriosam dolor perspiciatis.</p>
+        </div>
+    </div>
+  </div>
+</div>
+<footer>
+  <div class="container">
+    
+  </div>
+</footer>
