--- a/src/components/navbar/navbar.component.html
+++ b/src/components/navbar/navbar.component.html
@@ -8,11 +8,12 @@
     </div>
     </div>
     <div class="left-side">
-        <img src="../../assets/img/logo.png" alt="logo" height="20">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Shop</a></li>
-        <li><a href="#">Promo</a></li>
-        <li><a href="#">Blogs</a></li>
+      <a routerLink="/"><img src="../../assets/img/logo.png" alt="logo" height="20">
+        </a>
+        <li><a routerLink="/">Home</a></li>
+        <li><a routerLink="/store">Shop</a></li>
+        <li><a routerLink="#">Promo</a></li>
+        <li><a routerLink="#">Blogs</a></li>
     </div>
       <div class="right-side">
         <div class="wishlist">
