--- a/src/components/home/categories/categories.component.html
+++ b/src/components/home/categories/categories.component.html
@@ -3,108 +3,33 @@
        <div class="sales">
           <h3>Sale Products</h3>
           <hr />
-          <div class="product">
-             <img src="../../../assets/img/blackjacket.jpg" alt="" height="80">
+          <div class="product" *ngFor="let saleproduct of saleProducts">
+             <img [src]=sanitizeSrc(saleproduct.image) alt="" height="80">
              <div class="details">
-                <h4>Mens Fall Jacket In Black</h4>
-                <h4><span>£40.00</span> 20% OFF £72.00</h4>
-                <hr>
-             </div>
-          </div>
-          <div class="product">
-             <img src="../../../assets/img/blackbralette.jpg" alt="" height="80">
-             <div class="details">
-                <h4>Mens Fall Jacket In Black</h4>
-                <h4><span>£40.00</span> 20% OFF £72.00</h4>
-                <hr>
-             </div>
-          </div>
-          <div class="product">
-             <img src="../../../assets/img/bluesummershort.jpg" alt="" height="80">
-             <div class="details">
-                <h4>Mens Fall Jacket In Black</h4>
-                <h4><span>£40.00</span> 20% OFF £72.00</h4>
-                <hr>                
-             </div>
-          </div>
-          <div class="product">
-             <img src="../../../assets/img/blackbikini.jpg" alt="" height="80">
-             <div class="details">
-                <h4>Mens Fall Jacket In Black</h4>
-                <h4><span>£40.00</span> 20% OFF £72.00</h4>
-                <hr>
+                <h4>{{saleproduct.productName}}</h4>
+                <h4><span>{{saleproduct.originalPrice}}</span> {{saleproduct.percentOf}} OFF {{saleproduct.discountedTo}}</h4>
              </div>
           </div>
        </div>
        <div class="best-sellers">
           <h3>Best Sellers</h3>
           <hr />
-          <div class="product">
-             <img src="../../../assets/img/ledshoes.jpg" alt="" height="80">
+          <div class="product" *ngFor="let bestseller of bestSellers">
+             <img [src]=sanitizeSrc(bestseller.image) alt="" height="80">
              <div class="details">
-                <h4>Mens Fall Jacket In Black</h4>
-                <h4><span>£40.00</span> 20% OFF £72.00</h4>
-                <hr>
-             </div>
-          </div>
-          <div class="product">
-             <img src="../../../assets/img/navyblueshoes.jpg" alt="" height="80">
-             <div class="details">
-                <h4>Mens Fall Jacket In Black</h4>
-                <h4><span>£40.00</span> 20% OFF £72.00</h4>
-                <hr>
-             </div>
-          </div>
-          <div class="product">
-             <img src="../../../assets/img/goldzipperbackpack.jpg" alt="" height="80">
-             <div class="details">
-                <h4>Mens Fall Jacket In Black</h4>
-                <h4><span>£40.00</span> 20% OFF £72.00</h4>
-                <hr>
-             </div>
-          </div>
-          <div class="product">
-             <img src="../../../assets/img/blacktotebag.jpg" alt="" height="80">
-             <div class="details">
-                <h4>Mens Fall Jacket In Black</h4>
-                <h4><span>£40.00</span> 20% OFF £72.00</h4>
-                <hr>
+                <h4>{{bestseller.name}}</h4>
+                <h4>{{bestseller.price}}</h4>
              </div>
           </div>
        </div>
        <div class="kids-product">
           <h3>Kids Products</h3>
           <hr />
-          <div class="product">
-             <img src="../../../assets/img/anchorshirt.jpg" alt="" height="80">
+          <div class="product" *ngFor="let kidsproduct of kidsProducts">
+             <img [src]=sanitizeSrc(kidsproduct.image) alt="" height="80">
              <div class="details">
-                <h4>Mens Fall Jacket In Black</h4>
-                <h4><span>£40.00</span> 20% OFF £72.00</h4>
-                <hr>
-             </div>
-          </div>
-          <div class="product">
-             <img src="../../../assets/img/greyjacket.jpg" alt="" height="80">
-             <div class="details">
-                <h4>Mens Fall Jacket In Black</h4>
-                <h4><span>£40.00</span> 20% OFF £72.00</h4>
-                <hr>
-             </div>
-          </div>
-          <div class="product">
-             <img src="../../../assets/img/kidbluejacket.jpg" alt="" height="80">
-             <div class="details">
-                <h4>Mens Fall Jacket In Black</h4>
-                <h4><span>£40.00</span> 20% OFF £72.00</h4>
-                <hr>
-             </div>
-          </div>
-          <div class="product">
-             <img src="../../../assets/img/floraljumper.jpg" alt="" height="80">
-             <div class="details">
-                <h4>Mens Fall Jacket In Black</h4>
-                <h4><span>£40.00</span> 20% OFF £72.00</h4>
-                <hr>
+                <h4>{{kidsproduct.name}}</h4>
+                <h4>{{kidsproduct.price}}</h4>
              </div>
           </div>
        </div>
