--- a/src/components/home/home.component.html
+++ b/src/components/home/home.component.html
@@ -1,19 +1,21 @@
-<header [@fadeIn]="headerBackgroundState">
+<header [@fadeInHeader]="'show'">
   <div class="container">
-      <h1 [@slideUp]="headingTextState">New Arrivals</h1>
-      <h3>Sales 20% OFF</h3>
-      <a href="#">Shop now</a>
+      <h1 [@slideUp1]="headOneState">New Arrivals</h1>
+      <h3 [@slideUp2]="headThreeState">Sales 20% OFF</h3>
+      <div class="test" [@slideUp1]="anchorState">
+        <a  href="#">Shop now</a>
+      </div>
   </div>
 </header>
 <div class="info">
   <div class="container">
-      <div class="sales" [@test]="headerBackgroundState">
+      <div class="sales" [@fadeInInfo]="salesState">
           <h4>Sales</h4>
         </div>
-        <div class="weekly-discount" [@test2]="headerBackgroundState">
+        <div class="weekly-discount" [@fadeInInfo]="discountState">
           <h4>Weekly discount</h4>
         </div>
-        <div class="about-us" [@test3]="headerBackgroundState">
+        <div class="about-us" [@fadeInInfo]="aboutState">
           <h4>About Us</h4>
         </div>
   </div>
