--- a/src/components/home/featured/featured.component.html
+++ b/src/components/home/featured/featured.component.html
@@ -1,4 +1,4 @@
-<div class="featured" #featured>
+<div class="featured" (appear)="onAppear()">
   <div class="container">
     <h2>WEEKLY FEATURED PRODUCTS</h2>
     <div class="weekly-products">
