--- a/src/components/navbar/navbar.component.html
+++ b/src/components/navbar/navbar.component.html
@@ -11,7 +11,7 @@
       <a routerLink="/"><img src="../../assets/img/logo.png" alt="logo" height="20">
         </a>
         <li><a routerLink="/">Home</a></li>
-        <li><a routerLink="/store">Shop</a></li>
+        <li><a routerLink="shop">Shop</a></li>
         <li><a routerLink="#">Promo</a></li>
         <li><a routerLink="#">Blogs</a></li>
     </div>
