--- a/src/components/shop/shopcategories/shopcategories.component.html
+++ b/src/components/shop/shopcategories/shopcategories.component.html
@@ -7,8 +7,8 @@
     <div class="categories-ctn">
       <h4><i class="fa fa-caret-down"></i>  Categories</h4>
       <div class="categories-body">
-        <h5>Lifestyle</h5>
-        <h5>Running</h5>
+        <h5 (click)="onSelect($event)">Shirt</h5>
+        <h5 (click)="onSelect($event)">Jacket</h5>
         <h5>Training &amp; Gym</h5>
         <h5>Basketball</h5>
         <h5>Foot</h5>
