--- a/src/components/shop/shopcategories/shopcategories.component.html
+++ b/src/components/shop/shopcategories/shopcategories.component.html
@@ -9,11 +9,9 @@
       <div class="categories-body">
         <h5 (click)="onSelect($event)">Shirt</h5>
         <h5 (click)="onSelect($event)">Jacket</h5>
-        <h5>Training &amp; Gym</h5>
-        <h5>Basketball</h5>
-        <h5>Foot</h5>
-        <h5>Shoot</h5>
-        <h5>Lorem</h5>
+        <h5 (click)="onSelect($event)">Shoes</h5>
+        <h5 (click)="onSelect($event)">Bras</h5>
+        <h5 (click)="onSelect($event)">Tshirt</h5>
       </div>
     </div>
   </div>
