--- a/src/components/shop/products/products.component.html
+++ b/src/components/shop/products/products.component.html
@@ -1,10 +1,11 @@
 <div class="products">
   <div class="container-fluid">
-    <div class="product" *ngFor="let product of products">
+    <div class="product" *ngFor="let product of products" [@fadeInProduct]="'show'" (click)=onSelect(product.id)>
       <img [src]=sanitizeSrc(product.image) alt="">
       <div class="info">
           <h4>{{product.name}}</h4>
           <h5>£{{product.price}}</h5>
+        <a href="#">Add to Cart</a>
         </div>
     </div>
   </div>
