--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,8 +2,7 @@ $black: #333;
 $green: #03FCBA;
 $semigreen: rgb(62, 155, 147);
 $darkgreen: #8AB0AB;
-$white: #fff; 
-
+$white: #fff;
 @font-face {
   font-family: Segoe UI;
   src: url('../assets/fonts/segoeui.ttf')
@@ -13,7 +12,7 @@ $white: #fff;
   src: url('../assets/fonts/segoesb.ttf');
 }
 body{
-  margin: 0; 
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -88,7 +87,7 @@ nav{
         padding: 3px 0px;
       }
     }
-  }  
+  }
 }
 header{
   height: 500px;
@@ -270,6 +269,68 @@ header{
         p{
           text-align: center;
           padding: 0px 10px;
+        }
+      }
+    }
+  }
+}
+.checkout{
+  .container{
+    padding: 20px 0px;
+    > h1{
+      font-family: Segoe SB;
+      color: #2D2D2A;
+      text-align: center;
+    }
+    .row{
+      .head, .body{
+        display: flex;
+        flex-wrap: wrap;
+        .col {
+          padding: 10px;
+          &:nth-child(1) {
+            flex: 1;
+          }
+          &:nth-child(2) {
+            flex: 2;
+          }
+          &:nth-child(3) {
+            flex: 1;
+          }
+          &:nth-child(4) {
+            flex: 1;
+          }
+          &:nth-child(5) {
+            flex: 1;
+          }
+          img{
+            height: auto;
+            width: 100%;
+          }
+        }
+      }
+      .head{
+        .col{
+          h3{
+            color: $semigreen;
+          }
+        }
+      }
+      .body{
+        .col{
+          h3{
+            font-weight: 300;
+          }
+          h4{
+            &:nth-child(3){
+              font-weight: 300;
+              color: #dc3545;
+            }
+          }
+          input {
+            display: block;
+            width: 40px;
+          }
         }
       }
     }
