--- a/src/components/navbar/navbar.component.html
+++ b/src/components/navbar/navbar.component.html
@@ -21,8 +21,8 @@
           <h4>0</h4>
         </div>
         <div class="balance">
-          <i class="fa fa-shopping-cart"></i>
-          <h4>£0.00</h4>
+          <a routerLink="/checkout"><i class="fa fa-shopping-cart"></i>
+          <h4>£0.00</h4></a>
         </div>
         <div class="search">
         <i class="fa fa-search"></i>
