--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,154 +1,7 @@
-$black: #333;
-$green: #03FCBA;
-$semigreen: rgb(62, 155, 147);
-$darkgreen: #8AB0AB;
-$white: #fff;
-@font-face {
-  font-family: Segoe UI;
-  src: url('../assets/fonts/segoeui.ttf')
-}
-@font-face{
-  font-family: Segoe SB;
-  src: url('../assets/fonts/segoesb.ttf');
-}
-body{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  background: #fff;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6{
-  font-family: Segoe UI;
-  color: $black;
-  margin: 0;
-  padding: 0;
-}
-a{
-  font-family: Segoe UI;
-  text-decoration: none;
-  color: $black;
-}
-p{
-  font-family: Segoe UI;
-  color: $black;
-}
-li{
-  font-family: Segoe UI;
-  list-style-type: none;
-}
+@import '../../src/variables.scss';
 
-.container{
-  max-width: 1140px;
-  margin: 0 auto;
-}
 
-nav{
-  width: 100%;
-  background: #fff;
-  border-bottom: 8px solid $darkgreen;
-  .container{
-    padding: 15px 0px;
-    display: flex;
-    justify-content: space-between;
-    img,li,h4,.wishlist,.balance, .search{
-      vertical-align: top;
-      display: inline-block;
-    }
-    .left-side-mobile{
-      display: none;
-    }
-    .left-side{
-      img{
-        padding: 5px 0px;
-      }
-      li{
-        margin: 4px 10px;
-        a{
-          font-family: Segoe SB;
-        }
-      }
-    }
-    .right-side{
-      .wishlist, .balance{
-        padding: 4px 5px;
-        border-right: 1px solid $black;
-      }
-      .search{
-        padding: 4px 5px;
-      }
-      i{
-        padding: 3px 0px;
-      }
-    }
-  }
-}
-header{
-  height: 500px;
-  width: 100%;
-  background: url('../assets/img/imgbackground.png') no-repeat 70% 100%;
-  .container{
-    height: auto;
-    padding: 50px 0px;
-    h1, h3{
-      color: $white;
-      font-family: 'Times New Roman', Times, serif;
-    }
-    h1{
-      font-size: 5rem;
-    }
-    h3{
-      font-size: 3.5rem;
-      margin: 0px 0px 20px 0px;
-    }
-    a{
-      color: $white;
-      padding: 5px 35px;
-      border: 1px solid $white;
-    }
-  }
-}
-.info{
-  .container{
-    display: flex;
-    flex-wrap: wrap;
-    .sales, .weekly-discount, .about-us{
-      margin: 80px 15px;
-      flex: 1;
-      display: inline-block;
-      vertical-align: top;
-      height: 185px;
-      width: 150px;
-      position: relative;
-      background-size: 100%! important;
-      h4{
-        position: relative;
-        top: 40%;
-        color: $white;
-        text-align: center;
-        font-size: 1.4rem;
-        font-family: Arial;
-        font-weight: 300;
-        text-transform: uppercase;
-      }
-    }
-    .sales{
-      background: url('../assets/img/bluetshirt.png') 100% no-repeat;
-    }
-    .weekly-discount{
-      background: url('../assets/img/navyblueshoes.png') 100% no-repeat;
-    }
-    .about-us{
-      background: url('../assets/img/blackbag.png') 100% no-repeat;
-    }
-  }
-}
+
 .featured{
   .container{
     text-align: center;
@@ -235,45 +88,6 @@ header{
     }
   }
 }
-.info{
-  .container{
-    display: flex;
-    flex-wrap: wrap;
-    .info-wrapper{
-      margin: 60px 15px;
-      flex: 1;
-      .circle{
-        margin: 0 auto;
-        position: relative;
-        height: 180px;
-        width: 180px;
-        background: $darkgreen;
-        border-radius: 50%;
-        i{
-          display: block;
-          width: 100%;
-          text-align: center;
-          color: $white;
-          position: absolute;
-          font-size: 80px;
-          top: 0;
-          bottom: 0;
-          padding: 50px 0px;
-        }
-      }
-      .text{
-        margin: 15px 0px;
-        h3{
-          text-align: center;
-        }
-        p{
-          text-align: center;
-          padding: 0px 10px;
-        }
-      }
-    }
-  }
-}
 .checkout{
   .container{
     padding: 20px 0px;
@@ -336,55 +150,7 @@ header{
     }
   }
 }
-footer{
-  background: #2D2D2A;
-  height: auto;
-  width: 100%;
-  .container{
-    display: flex;
-    flex-wrap: wrap;
-    padding: 20px 0px;
-    .logos{
-      flex: 2;
-      img{
-        margin: -5px 0px;
-        display: inline-block;
-      }
-      .logo{
-        margin: 5px;
-        vertical-align: top;
-        display: inline-block;
-      }
-    }
-    .info{
-      flex: 1;
-      .info-wrapper{
-        margin: 15px 0px;
-        img{
-          display: inline-block;
-        }
-        .text-wrapper{
-          padding: 0px 5px;
-          vertical-align: top;
-          display: inline-block;
-          h5{
-            color: $white;
-            font-weight: 300;
-          }
-        }
-      }
-    }
-    .copyright{
-      text-align: center;
-      padding: 50px 0px;
-      display: block;
-      width: 100%;
-      h3{
-        color: $white;
-      }
-    }
-  }
-}
+
 .shop{
   .container{
     main{
