--- a/src/components/home/featured/featured.component.html
+++ b/src/components/home/featured/featured.component.html
@@ -1,14 +1,12 @@
-<div class="featured" (appear)="onAppear()">
-  <div class="container">
-    <h2>WEEKLY FEATURED PRODUCTS</h2>
-    <div class="weekly-products">
-      <div class="product" *ngFor="let weeklyproduct of weeklyProducts">
-      <div class="image" [ngStyle]="{
-        'background-image': 'url('+ weeklyproduct.image +')'
-      }"></div>
-        <h4>{{weeklyproduct.name}}</h4>
-        <h4>{{weeklyproduct.price}}</h4>
-      </div>
+<div class="container" (appear)="onAppear()" [@fadeIn]="featuredState">
+  <h2>WEEKLY FEATURED PRODUCTS</h2>
+  <div class="weekly-products">
+    <div class="product" *ngFor="let weeklyproduct of weeklyProducts">
+    <div class="image" [ngStyle]="{
+      'background-image': 'url('+ weeklyproduct.image +')'
+    }"></div>
+      <h4>{{weeklyproduct.name}}</h4>
+      <h4>{{weeklyproduct.price}}</h4>
     </div>
   </div>
 </div>
