--- a/src/components/home/header/header.component.html
+++ b/src/components/home/header/header.component.html
@@ -1,8 +1,8 @@
 <header>
   <div class="container">
-      <h1>New Arrivals</h1>
-      <h3>Sales 20% OFF</h3>
-      <div>
+      <h1 [@slideUp1]="headOneState">New Arrivals</h1>
+      <h3 [@slideUp2]="headThreeState">Sales 20% OFF</h3>
+      <div [@slideUp1]="anchorState">
         <a  href="#">Shop now</a>
       </div>
   </div>
