--- a/src/components/shop/products/products.component.scss
+++ b/src/components/shop/products/products.component.scss
@@ -7,12 +7,17 @@
       display: inline-block;
       padding: 5px;
       width: 28%;
+      
       img{
         width: 100%;
         height: auto;
       }
+      
       .info{
         padding: 10px 0px;
+        h4{
+          cursor: pointer;
+        }
       }
     }
   }
